# erika-trie

./: Makefile.in  ProjectHome.md  README
perl/ErikaTrie/: Makefile.PL  README  erika_common_prefix_search.pl  erika_extract.pl  erika_predictive_search.pl  typemap
perl/ErikaTrie/t/: ErikaTrie.t
src/: Makefile  Makefile.am  Makefile.in  erika_bv.cc  erika_bv.h  erika_defs.h  erika_extract.cc  erika_extract_plus.cc  erika_make_node.cc  erika_make_trie.cc  erika_make_tt.sh  erika_predictive_search.cc  erika_trie.cc  erika_trie_perl.cc  erika_trie_perl.h  erika_trie_perl.i  erika_vcode.cc
trunk/: README  bootstrap  config.h.in  configure  configure.ac
trunk/perl/ErikaTrie/: Changes  ErikaTrie.xs  MANIFEST  erika_common_prefix_search.pl  erika_extract.pl  erika_predictive_search.pl
trunk/perl/ErikaTrie/lib/: ErikaTrie.pm
trunk/src/: Erika.pm  Makefile  erika_bv.cc  erika_common_prefix_search.cc  erika_extract.cc  erika_extract.pl  erika_make.sh  erika_make_node.cc  erika_make_tail.cc  erika_make_trie.cc  erika_make_value.cc  erika_make_vt.sh  erika_predictive_search.cc  erika_trie.cc  erika_trie.h  erika_vcode.cc  erika_vcode.h  find_libperl.pl
